# Battleship

./: .gitignore  CLAUDE.md  battleship.md  eig_vs_ellr.jsx  eig_vs_ellr_v2.jsx  pyproject.toml  transcript.html  transcript.md  transcript.tex
engine/: board.py  enumerate.py  exact.py  metrics.py  questions.py  smc.py
mockups/: admiralty_dashboard.html
results/: benchmark_3x10.json  benchmark_3x10.md  benchmark_3x10_approx.json
results/replay/: eig_approx_seed0.json  eig_seed0.json  ellr_approx_seed0.json  ellr_seed0.json  thompson_seed0.json
scripts/: benchmark_3x10.sh
simulator/: benchmark.py  runner.py
strategies/: _mbayes.py  base.py  eig.py  ellr.py  thompson.py  user.py
tests/: test_benchmark.py  test_board.py  test_enumerate.py  test_exact.py  test_metrics.py  test_questions.py  test_runner.py  test_smc.py  test_strategies.py
web/: __init__.py  app.py
